--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "infoPlist": {
         "NSBluetoothAlwaysUsageDescription": "This app uses Bluetooth to discover and connect to nearby devices.",
         "NSBluetoothPeripheralUsageDescription": "This app uses Bluetooth to discover and connect to nearby devices."
-      }
+      },
+      "bundleIdentifier": "com.giannislp.Bluetooth"
     },
     "android": {
       "adaptiveIcon": {
@@ -32,8 +33,12 @@
         "BLUETOOTH_SCAN",
         "BLUETOOTH_CONNECT",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
-      ]
+        "ACCESS_COARSE_LOCATION",
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.BLUETOOTH_CONNECT"
+      ],
+      "package": "com.giannislp.Bluetooth"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -43,7 +48,10 @@
         "react-native-ble-plx",
         {
           "isBackgroundEnabled": true,
-          "modes": ["peripheral", "central"],
+          "modes": [
+            "peripheral",
+            "central"
+          ],
           "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to use Bluetooth to discover and connect to nearby devices."
         }
       ]
